# data-analyzer-poc

./: .gitignore  AZURE_PIPELINES_SETUP.md  Dockerfile  LICENSE  README.md  VRAI_POC_Plan.md  azure-pipelines.yml  pyproject.toml  requirements.txt  test-service-connection.yml  test_api.py
.github/workflows/: main.yml
src/: analysis.py  config.py  database.py  main.py  models.py
tests/: test_main.py
